# VP-Estimation-with-Prior-Gravity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
cmake/: CMakeHelper.cmake
notebooks/: demo_vp_estimation_prior_gravity.ipynb
runners/: evaluator.py  functions.py  run_lamar.py  run_scannet.py  run_york_urban.py
vp_estimation_with_prior_gravity/: CMakeLists.txt  evaluation.py  solvers.py  visualization.py
vp_estimation_with_prior_gravity/base/: CMakeLists.txt  functions.cpp  functions.h  linebase.cc  linebase.h  pose.cpp  pose.h  types.h
vp_estimation_with_prior_gravity/datasets/: lamar.py  scannet.py  york_urban.py
vp_estimation_with_prior_gravity/estimators/: CMakeLists.txt  bindings.cc  calibrated_3lines.cpp  calibrated_3lines.h  calibrated_vertical_1line.cpp  calibrated_vertical_1line.h  exhaustive_sampler.h  functions.cpp  functions.h  functions_hybrid.cpp  functions_hybrid.h  hybrid_uncalibrated_vp_estimator.cpp  hybrid_uncalibrated_vp_estimator.h  sprt_preemptive_verification.h  uncalibrated_4lines_211.cpp  uncalibrated_4lines_211.h  uncalibrated_4lines_220.cpp  uncalibrated_4lines_220.h  uncalibrated_vertical_2lines_011.cpp  uncalibrated_vertical_2lines_011.h  uncalibrated_vertical_2lines_11.cpp  uncalibrated_vertical_2lines_11.h  uncalibrated_vertical_2lines_11_v2.cpp  uncalibrated_vertical_2lines_11_v2.h  uncalibrated_vertical_2lines_2.cpp  uncalibrated_vertical_2lines_2.h  uncalibrated_vertical_vp_estimator_base.cpp  uncalibrated_vertical_vp_estimator_base.h  uncalibrated_vp_estimator_base.cpp  uncalibrated_vp_estimator_base.h  vp_estimator_base.cpp  vp_estimator_base.h  vp_hybrid_ransac.h  vp_ransac.h
vp_estimation_with_prior_gravity/features/: line_detector.py  matcher.py
vp_estimation_with_prior_gravity/refinement/: CMakeLists.txt  cost_functions.h  ls_non_orthogonal.cpp  ls_non_orthogonal.h  ls_orthogonal.cpp  ls_orthogonal.h  ls_orthogonal_vertical.cpp  ls_orthogonal_vertical.h  util.h  vp2rot.h
vp_estimation_with_prior_gravity/solvers/: CMakeLists.txt  NMS.h  NMS_calibrated.h  solver_vp_011.h  solver_vp_11_vertical.h  solver_vp_11_vertical_v2.h  solver_vp_211.cpp  solver_vp_211.h  solver_vp_220.cpp  solver_vp_220.h  solver_vp_2_vertical.h  solver_vp_calibrated_vertical.h
